# atato-assignment

./: .editorconfig  conftest.py  constants.py  pyproject.toml  pytest.ini
pages/: __init__.py  base_page.py  register_page.py  workspace_page.py
tests/: conftest.py  test_login.py  test_register.py
