[tool.poetry]
name = "atato-test-assignment"
version = "1.0.0"
description = ""
authors = ["Alexander Momot <alexander.momot@icloud.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "3.9.10"
selenium = "3.141.0"
auto-selenium = "^1.0.1"
pytest = "7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
